# apples_of_eden

./: .env_template  .gitignore  Cargo.toml  readme.md
src/: main.rs
src/lib/: crawler.rs  filters.rs  mod.rs
src/lib/spiders/: magiceden.rs  mod.rs
