[package]
name = "apples_of_eden"
version = "0.1.0"
authors = ["palinko <arpad.palinkas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.1"
solana-program = "1.14.1"
solana-sdk = "1.14.1"
solana-account-decoder = "1.14.1"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.65"
futures = "0.3.24"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
select = "0.6.0-alpha.1"
url = "2.2"
tokio-stream = "0.1"
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
